--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -9,20 +9,20 @@ title = "Home"
   isoCode = "en"
   rtl = false
   dateFormat = "2 January 2006"
-  # logo = "img/logo.png"
-  # secondaryLogo = "img/secondary-logo.png"
-  description = "My awesome website"
+  logo = "initials-bw.webp"
+  #secondaryLogo = "g11205.webp"
+  description = "Landscape and wildlife photography"
   # copyright = "Copy, _right?_ :thinking_face:"
 
 [params.author]
 name = "Paul Beesley"
-email = "youremail@example.com"
-#   image = "img/blowfish_logo.png"
+#email = "youremail@example.com"
+#image = "g11203bw.png"
 imageQuality = 80
-#   headline = "I'm only human"
+headline = "Landscape & Wildlife Photography"
 #   bio = "A little bit about you"
-#   links = [
-#     { email = "mailto:hello@your_domain.com" },
+links = [
+#{ email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
 #     { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
 #     { apple = "https://www.apple.com" },
@@ -73,4 +73,4 @@ imageQuality = 80
 #     { youtube = "https://youtube.com/username" },
 #     { ko-fi = "https://ko-fi.com/username" },
 #     { codeberg = "https://codeberg.org/username"},
-#   ]
+]
