--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -13,16 +13,11 @@
 [[main]]
  name = "About"
  pageRef = "about"
- weight = 3
-
-[[main]]
- name = "Blog"
- pageRef = "posts"
  weight = 2
 
 [[main]]
- name = "Galleries"
- pageRef = "galleries"
+ name = "Posts"
+ pageRef = "posts"
  weight = 1
 
 
@@ -31,12 +26,12 @@
 # the copyright notice. Configure as per the main menu above.
 
 
-# [[footer]]
-#   name = "Tags"
-#   pageRef = "tags"
-#   weight = 10
+[[footer]]
+name = "Tags"
+pageRef = "tags"
+weight = 10
 
-# [[footer]]
-#   name = "Categories"
-#   pageRef = "categories"
-#   weight = 20
+[[footer]]
+name = "Categories"
+pageRef = "categories"
+weight = 20
