--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -74,7 +74,7 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
   layoutBackgroundHeaderSpace = true # only used when heroStyle equals background
   showBreadcrumbs = false
   showDraftLabel = true
-  showEdit = true
+  showEdit = false
   editURL = "https://github.com/poll-busily/hugosite/"
   editAppendPath = true
   seriesOpened = false
@@ -85,12 +85,12 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
   showTableOfContents = true
   # showRelatedContent = false
   # relatedContentLimit = 3
-  showTaxonomies = false # use showTaxonomies OR showCategoryOnly, not both
+  showTaxonomies = true # use showTaxonomies OR showCategoryOnly, not both
   showCategoryOnly = false # use showTaxonomies OR showCategoryOnly, not both
   showAuthorsBadges = false
   showWordCount = false
   sharingLinks = [ "linkedin", "bluesky", "mastodon", "reddit", "whatsapp"]
-  showZenMode = false
+  showZenMode = true
 
 [list]
   showHero = false
@@ -120,7 +120,7 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
   showViews = false
   showLikes = false
   showTableOfContents = false
-  cardView = false
+  cardView = true
 
 [term]
   showHero = false
